 2012-12-23 06:52  dimitr 
   M src/jrd/jrd.cpp
Corrected the check_database() logic.

 2012-12-22 16:56  dimitr 
   M src/jrd/VirtualTable.cpp
   M src/jrd/exe.cpp
   M src/jrd/jrd.cpp
   M src/jrd/jrd.h
   M src/jrd/pag.cpp
   M src/jrd/shut.cpp
   M src/jrd/tra.cpp
   M src/jrd/tra.h
Moved the statement cancellation logic from the transaction level to the attachment level. It reuses the already existing ATT_cancel_raise handling and simplifies the code.
Also, encapsulated the shutdown/cancellation signaling code.

 2012-12-22 15:02  dimitr 
   M src/jrd/jrd.cpp
Fixed the missing dbb flags, especially DBB_security_db.

 2012-12-22 12:55  dimitr 
   M src/jrd/jrd.cpp
   M src/jrd/jrd.h
We don't need the new flags for these tasks.

 2012-12-22 12:30  dimitr 
   M src/common/classes/PublicHandle.cpp
   M src/jrd/Database.h
Fixed the crash that appears after PublicHandle became an inherited class (thus containing vtable).

 2012-12-20 15:28  alexpeshkoff 
   M src/burp/burp.cpp
Backported fix for CORE-3995: Slight problem with GBAK parameter checking

 2012-12-18 19:35  dimitr 
   M src/jrd/cch.cpp
Slightly refactored the error handling.

 2012-12-18 13:30  dimitr 
   M src/jrd/exe.cpp
Attempted to fix the user savepoint logic I've accidentally broken in a recent commit.

 2012-12-18 11:20  dimitr 
   M src/lock/lock.cpp
Fixed the Windows build.

 2012-12-14 17:45  alexpeshkoff 
   M builds/posix/make.shared.variables
   M src/common/classes/PublicHandle.cpp
   M src/common/classes/PublicHandle.h
   M src/common/classes/RefMutex.h
   M src/common/utils.cpp
   M src/common/utils_proto.h
   M src/jrd/Database.cpp
   M src/jrd/Database.h
   M src/jrd/DatabaseSnapshot.cpp
   M src/jrd/cch.cpp
   M src/jrd/event.cpp
   M src/jrd/isc_sync.cpp
   M src/jrd/jrd.cpp
   M src/jrd/jrd.h
   M src/jrd/trace/TraceConfigStorage.cpp
   M src/jrd/trace/TraceLog.cpp
   M src/jrd/vio.cpp
   M src/jrd/why.cpp
   M src/lock/lock.cpp
   M src/remote/interface.cpp